--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@
   <div class="card">
     <h1>Happy Valentine’s Day ❤️</h1>
     <p>
-      To the most beautiful part of my life,<br>
-      Every heartbeat of mine chooses you.<br><br>
-      Thank you for being my love, my peace,<br>
-      and my forever. 💕
+      sorry for evrything nannaa<br>
+      inkosari ala cheyanu nannaa.
     </p>
     <p><strong>— Yours always 💖</strong></p>
   </div>
