--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Happy Valentine’s Day ❤️</title>
+  <title>Sorry keeru papa.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Happy Valentine’s Day ❤️</title>
+  <title>Sorry keeru papa.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      margin: 0;
+      margin: 100vh;
       height: 100vh;
       background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       display: flex;
@@ -59,12 +59,12 @@
 <body>
 
   <div class="card">
-    <h1>Happy Valentine’s Day ❤️</h1>
+    <h1>Sorry keeru papa.</h1>
     <p>
-      sorry for evrything nannaa<br>
+      sorry nannaa<br>
       inkosari ala cheyanu nannaa.
     </p>
-    <p><strong>— Yours always 💖</strong></p>
+    <p><strong>-ni cheri babu.</strong></p>
   </div>
 
   <script>
